[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-utils"
version = "0.1.1"
description = "Frequently used utility functions for robot learning research"
authors = [{ name = "Yihuai Gao", email = "davidgao1013@gmail.com" }]
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "robot_utils*",
]

[project.urls]
Homepage = "https://github.com/yihuai-gao/robot-utils"
